# health-sync

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-hermes-vps.yml
deploy/: docker-compose.service.yml  update-mcp-snippet.sh
docs/: SYNC_PLAN.md
src/health_sync/: __init__.py  cli.py  flows.py  mappings.py  settings.py  state.py  sync.py
src/health_sync/adapters/: garmin_mcp.py  mcp.py  strava.py  yazio_mcp.py  zepp_mcp.py
tests/: test_mappings.py  test_schedules.py  test_state.py  test_sync.py
