[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-sync"
version = "0.1.0"
description = "Personal health data sync service for Zepp, Garmin, Yazio, and Strava"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.25.0",
    "prefect>=3.0.0",
]

[project.scripts]
health-sync = "health_sync.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/health_sync"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
